--- a/SupremeCoders_team_keyData/index.html
+++ b/SupremeCoders_team_keyData/index.html
@@ -16,7 +16,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Lato:wght@400;700&family=Sarabun:wght@700&display=swap" 
                 rel="stylesheet" />
 
-            <!-- <link rel="shortcut icon" href="img/favicon.ico?ver=1.0" type="image/x-icon" /> -->
+            <link rel="shortcut icon" href="../dist/img/favicon.ico" type="image/x-icon" />
 
             <!-- CSS
             ================================================== -->  
